--- a/requirements.yml
+++ b/requirements.yml
@@ -10,6 +10,8 @@ roles:
     version: master
 collections:
   - name: community.general
+  - name: https://github.com/marcus-grant/ansible-collection-dotfiles
+    type: git
 # - name: marcus-grant.common-packages
 #   src: https://github.com/marcus-grant/role-my-common-packages
 #   version: master
